--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <!-- <input type="range" id="progress"> -->
     </div>
 
+    <div id="venus"></div>
+
     <script src="main.js"></script>
 </body>
 </html>
