Más bonito, días y frases

--- a/index.html
+++ b/index.html
@@ -3,20 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cuenta Regresiva</title>
+    <title>Venus</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Boldonse&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div>
-        <h2></h2>
-        <p>Me gusta ver nuestra espera como un viaje, nos encontramos a</p>
-        <div id="countdown"></div>
-        <p>de nuestro punto de encuentro, la Tierra viaja a 29.8 km/s, entonces no estamos esperando encontrarnos, sino estamos en nuestro camino al reencuentro.</p>
-        <p><i>Te amo</i></p>
-        <!-- <input type="range" id="progress"> -->
+    <div id="stars"></div>
+    <header>
+        <h2>Venus</h2>
+    </header>
+    <div class="countdown_container">
+        <h1 id="phrase">Te amo</h1>
+        <table>
+            <tr>
+                <td id="countdown"></td>
+                <td id="countdown_timer"></td>
+            </tr>
+        </table>
     </div>
 
-    <div id="venus"></div>
+    <a id="venus" href="./letters/"></a>
 
     <script src="main.js"></script>
 </body>
