--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <table>
             <tr>
                 <td id="countdown"></td>
-                <td id="countdown_timer"></td>
+                <td id="countdown_timer" style="text-align: right;"></td>
             </tr>
         </table>
     </div>
