--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
         </table>
     </div>
 
-    <a id="venus" href="./letters/"></a>
+    <div id="birdie">
+        <img src="./src/images.jpeg" alt="">
+        <h2>Birdie</h2>
+        <div>
+            <audio src="src/Birdie.m4a" id="audioBirdie"></audio>
+        </div>
+    </div>
 
     <script src="main.js"></script>
 </body>
